# VisionHUD

./: .gitignore  package-lock.json  package.json  readme.md
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
components/: dropzone.tsx  footer.tsx  header.tsx  hud-demo.tsx  terminal.tsx  theme-toggle.tsx
src-back/: .gitignore  Cargo.toml
src-back/src/: main.rs
src-python/: tracker.py  tracker.spec
